# predict_housing

./: .gitignore  GUIDE.md  Makefile  README.md  README_PREPROCESSING.md  app.py  config.py  crawl_nhatot.py  crawl_nhatot_crawl4ai.py  data.ipynb  data_preprocessing.ipynb  data_preprocessing.py  gia_nha_processed.csv  gia_nha_test.csv  gia_nha_train.csv  main.py  nhatot_crawl4ai.csv  nhatot_real_estate.csv  nhatot_test.csv  preprocessing_pipeline.py  pyproject.toml  requirements.txt  test_crawl4ai.py  visualization_analysis.py  visualize_raw_data.ipynb  visualize_raw_data.py
DuyToanFolder/: bagging_final.ipynb  train_data.csv
DuyToanFolder/data/: test_data.csv
DuyToanFolder/src/: bagging.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/: catboost_training.json  (+3 more)
data/: encoded_nhatot_data.csv  gia_nha.csv  gia_nha_processed_ml_ready.csv  gia_nha_test.csv  gia_nha_train.csv  test_data.csv  test_data_1.csv  train_data.csv  train_data_1.csv
docs/: DEPLOY.md  TRAINING_AND_CRAWLING_DOCS.md  TRAINING_STRATEGY.md  data_processing_guide.md  data_processing_kfold.md  preprocessing_how_why.md
models/: all_metrics.json  best_hyperparams.json  column_mapping.json  cv_scores.json  feature_names.json  metrics.json
src/: bagging.py  catboost.ipynb  config.py  lightgbm.ipynb  preprocessing_pipeline.py  processing_data.ipynb  train_model.py  visualization_analysis.py  visualize_data.ipynb  visualize_raw_data.ipynb  xulidulieu2.ipynb
(+34 files in other folders)
