[project]
name = "predict-housing"
version = "1.0.0"
description = "House Price Prediction with Machine Learning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.32.0,<1.50.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "pyarrow>=15.0.0,<18.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "optuna>=3.5.0",
]

[project.scripts]
train = "src.train_model:main"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
]
